--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="about-image fade-in">
-                    <img src="c:\Users\araat\Downloads\IMG_3591.JPG"  alt="Profile Picture" class="profile-image">
+                    <img src="IMG_3591.JPG"  alt="Profile Picture" class="profile-image">
                 </div>
             </div>
         </div>
@@ -293,4 +293,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
