--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
                 <div class="portfolio-item fade-in" data-category="branding">
                     <div class="portfolio-image">
-                        <img src="c:\Users\araat\Downloads\3.jpg" alt="Brand Identity Design">
+                        <img src="3.jpg" alt="Brand Identity Design">
                         <div class="portfolio-overlay">
                             <a href="#" class="portfolio-link" aria-label="View Brand Identity Design project">View Project</a>
                         </div>
@@ -295,4 +295,5 @@
 </body>
 
 </html>
+
 
