--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="about-image fade-in">
-                    <img src="IMG_3591 (1).JPG"  alt="Profile Picture" class="profile-image">
+                    <img src="image/IMG_3591 (1).JPG"  alt="Profile Picture" class="profile-image">
                 </div>
             </div>
         </div>
@@ -295,5 +295,6 @@
 </body>
 
 </html>
+
 
 
