--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item fade-in" data-category="web">
                     <div class="portfolio-image">
-                        <img src="c:\Users\araat\Downloads\1.jpg" alt="E-commerce Platform">
+                        <img src="1.jpg" alt="E-commerce Platform">
                         <div class="portfolio-overlay">
                             <a href="#" class="portfolio-link" aria-label="View E-commerce Platform project">View Project</a>
                         </div>
@@ -188,7 +188,7 @@
 
                 <div class="portfolio-item fade-in" data-category="mobile">
                     <div class="portfolio-image">
-                        <img src="c:\Users\araat\Downloads\2.jpg" alt="Fitness Mobile App">
+                        <img src="2.jpg" alt="Fitness Mobile App">
                         <div class="portfolio-overlay">
                             <a href="#" class="portfolio-link" aria-label="View Fitness Mobile App project">View Project</a>
                         </div>
@@ -295,6 +295,7 @@
 </body>
 
 </html>
+
 
 
 
