--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="testimonial-content">
                         <p class="testimonial-text">Sep 2024 - Nov 2024<br>Instalasi jaringan fiber optik: penarikan kabel, pemasangan ODP/ONT<br>Splicing/sambung kabel fiber menggunakan fusion splicer/Melakukan pemasangan perangkat jaringan (router, modem, access point, switch)</p>
                         <div class="testimonial-author">
-                            <img src="c:\Users\araat\Downloads\bnet.jpg" alt="Sarah Johnson" class="author-image">
+                            <img src="image/bnet.jpg" alt="Sarah Johnson" class="author-image">
                             <div class="author-info">
                                 <h4 class="author-name">BenetFiber</h4>
                                 <p class="author-title">MAGANG </p>
@@ -135,7 +135,7 @@
                     <div class="testimonial-content">
                         <p class="testimonial-text">Jan 2024 - Mar 2024<br>Perawatan, perbaikan, serta troubleshooting perangkat CCTV/Instalasi dan konfigurasi perangkat CCTV (IP Camera & Analog)/Mendukung tim IT dalam pemeliharaan jaringan dan perangkat komputer/Perawatan, perbaikan, serta troubleshooting perangkat CCTV.</p>
                         <div class="testimonial-author">
-                            <img src="c:\Users\araat\Downloads\OIP.jpg" alt="Michael Chen" class="author-image">
+                            <img src="image/OIP.jpg" alt="Michael Chen" class="author-image">
                             <div class="author-info">
                                 <h4 class="author-name">PT Sentral Teknologi Asia </h4>
                                 <p class="author-title">MAGANG</p>
@@ -148,7 +148,7 @@
                     <div class="testimonial-content">
                         <p class="testimonial-text">Diagnosa kerusakan pakai alat scanner atau manual/Diagnosa kerusakan pakai alat scanner atau manual/Perawatan umum: cek tekanan ban, isi cairan radiator, AC mobil/Servis rutin: ganti oli, filter, busi, kampas rem, dllSistem transmisi & suspensi: kopling, shockbreaker, gardan</p>
                         <div class="testimonial-author">
-                            <img src="c:\Users\araat\Downloads\mek.jpg" alt="Emily Rodriguez" class="author-image">
+                            <img src="image/mek.jpg" alt="Emily Rodriguez" class="author-image">
                             <div class="author-info">
                                 <h4 class="author-name"></h4>Bengkel AutoZone
                                 <p class="author-title">Juni 2024 - Sekarang</p>
@@ -295,6 +295,7 @@
 </body>
 
 </html>
+
 
 
 
