--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="#skills" class="nav-link">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#portfolio" class="nav-link">Portfolio</a>
+                    <a href="#portfolio" class="nav-link">Sertifikat</a>
                 </li>
                 <li class="nav-item">
                     <a href="#testimonials" class="nav-link">work experience</a>
@@ -164,7 +164,7 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
         <div class="container">
-            <h2 class="section-title fade-in">Dokumentasi</h2>
+            <h2 class="section-title fade-in">Sertifikat</h2>
             
             
 
@@ -217,60 +217,7 @@
                     </div>
         </div>
     </section>
-
    
-    <!-- Contact Section -->
-    <section id="contact" class="contact section">
-        <div class="container">
-            <div class="contact-content">
-                <div class="contact-info fade-in">
-                    <h2 class="section-title">Let's Work Together</h2>
-                    <p class="contact-description">
-                        Ready to bring your ideas to life? I'd love to hear about your project and discuss how we can create something amazing together.
-                    </p>
-                    <div class="contact-details">
-                        <div class="contact-item">
-                            <span class="contact-label">Email</span>
-                            <a href="mailto:hello@yourname.com" class="contact-link">hello@yourname.com</a>
-                        </div>
-                        <div class="contact-item">
-                            <span class="contact-label">Phone</span>
-                            <a href="tel:+1234567890" class="contact-link">+1 (234) 567-890</a>
-                        </div>
-                        <div class="contact-item">
-                            <span class="contact-label">Location</span>
-                            <span class="contact-text">New York, NY</span>
-                        </div>
-                    </div>
-                    <div class="social-links">
-                        <a href="#" class="social-link" aria-label="LinkedIn">LinkedIn</a>
-                        <a href="#" class="social-link" aria-label="Twitter">Twitter</a>
-                        <a href="#" class="social-link" aria-label="Dribbble">Dribbble</a>
-                        <a href="#" class="social-link" aria-label="GitHub">GitHub</a>
-                    </div>
-                </div>
-                <form class="contact-form fade-in" id="contact-form">
-                    <div class="form-group">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" id="name" name="name" class="form-input" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" id="email" name="email" class="form-input" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject" class="form-label">Subject</label>
-                        <input type="text" id="subject" name="subject" class="form-input" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea id="message" name="message" class="form-textarea" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-button">Send Message</button>
-                </form>
-            </div>
-        </div>
-    </section>
 
     <!-- Footer -->
     <footer class="footer">
@@ -295,6 +242,7 @@
 </body>
 
 </html>
+
 
 
 
