--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Professional portfolio website template - Modern minimalist design">
     <meta name="keywords" content="portfolio, professional, designer, developer, minimalist">
     <meta name="author" content="Your Name">
-    <title>Dendi Saputra RPortfolio</title>
+    <title>Portofolio Dendi Saputra R</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -242,6 +242,7 @@
 </body>
 
 </html>
+
 
 
 
