--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                 <h1 class="hero-title">Dendi Saputra Ramadhan</h1>
                 <p class="hero-subtitle">Creative Professional & Problem Solver</p>
                 <p class="hero-description">IT Support & Networking Technician</p>
-                <a href="#portfolio" class="cta-button">View Projects</a>
             </div>
         </div>
         <div class="hero-scroll-indicator">
@@ -109,7 +108,6 @@
                     <h3 class="skill-title">Networking Technician</h3>
                     <p class="skill-description">Instalasi & konfigurasi jaringan/Troubleshooting koneksi internet/Perawatan & perbaikan jaringan</p>
                 
-    </section>
 
  <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
@@ -172,9 +170,8 @@
                     <div class="portfolio-image">
                         <img src="1.jpg" alt="E-commerce Platform">
                         <div class="portfolio-overlay">
-                            <a href="#" class="portfolio-link" aria-label="View E-commerce Platform project">View Project</a>
                         </div>
-                    </div>
+                    </div
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">sertifikat Magang PT Sentral Teknologi Asia</h3>
                         <p class="portfolio-description">Telah Menyelesaikan Praktk Kerja Lapangan Di PT Sentral Teknologi Asia</p>
@@ -240,6 +237,7 @@
 </body>
 
 </html>
+
 
 
 
