--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                     <div class="portfolio-image">
                         <img src="1.jpg" alt="E-commerce Platform">
                         <div class="portfolio-overlay">
+                        <a href="#" class="portfolio-link" aria-label="View E-commerce Platform project">View Project</a>
                         </div>
                     </div
                     <div class="portfolio-content">
@@ -237,6 +238,7 @@
 </body>
 
 </html>
+
 
 
 
