--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <h1 class="hero-title">Dendi Saputra Ramadhan</h1>
                 <p class="hero-subtitle">Creative Professional & Problem Solver</p>
                 <p class="hero-description">IT Support & Networking Technician</p>
+                <a href="#portfolio" class="cta-button">View Projects</a>
             </div>
         </div>
         <div class="hero-scroll-indicator">
@@ -238,6 +239,7 @@
 </body>
 
 </html>
+
 
 
 
