--- a/index.html
+++ b/index.html
@@ -218,19 +218,19 @@
         </div>
 
 
-
-    <!-- Footer -->
+   <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-left">
-                    <p class="footer-text">&copy; 2025 Dendi Saputra R . All rights reserved.</p>
+                    <p class="footer-text">&copy; 2024 Your Name. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
                     <nav class="footer-nav">
                         <a href="#home" class="footer-link">Home</a>
                         <a href="#about" class="footer-link">About</a>
                         <a href="#portfolio" class="footer-link">Portfolio</a>
+                        <a href="#contact" class="footer-link">Contact</a>
                     </nav>
                 </div>
             </div>
@@ -240,4 +240,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
