--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="about-image fade-in">
-                    <img src="image\IMG_3591.JPG"  alt="Profile Picture" class="profile-image">
+                    <img src="image\IMG_3591 (1).JPG"  alt="Profile Picture" class="profile-image">
                 </div>
             </div>
         </div>
@@ -243,3 +243,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
