--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="#skills" class="nav-link">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#portfolio" class="nav-link">Portfolio</a>
+                    <a href="#portfolio" class="nav-link">Sertifikat</a>
                 </li>
                 <li class="nav-item">
                     <a href="#testimonials" class="nav-link">work experience</a>
@@ -243,4 +243,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
