--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional portfolio website template - Modern minimalist design">
-    <meta name="keywords" content="portfolio, professional, designer, developer, minimalist">
-    <meta name="author" content="Your Name">
+    <meta name="description" content="portfolio Dendi Saputra Ramadhan">
+    <meta name="keywords" content="">
+    <meta name="author" content="Dendi Saputra Ramadhan">
     <title>Dendi Saputra Ramadhan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -243,5 +243,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
